[package]
name = "minesweeper_lib"
version = "0.1.0"
edition = "2021"
authors = ["Renan <renannguyen@pm.me>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.81"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand = "0.8.5"